--- a/src/main/resources/templates/fragments/player.html
+++ b/src/main/resources/templates/fragments/player.html
@@ -21,7 +21,7 @@
                 <div class="progress-fill" id="progressFill"></div>
             </div>
 
-            <span class="time" id="duration">0:00</span>
+            <span class="time" id="playerDuration">0:00</span>
         </div>
     </div>
 
