--- a/src/main/resources/templates/artist/artist-albums.html
+++ b/src/main/resources/templates/artist/artist-albums.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>앨범 전체 | PeachMusic</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" href="/css/layout.css" />
     <link rel="stylesheet" href="/css/artist-albums.css" />
     <script th:src="@{/js/sidebar.js}" defer></script>
